# mortar

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING_zh-hans.md  Cargo.toml  build-docs.sh  deny.toml  docs-serve-en.sh  docs-serve-zh.sh  example.json  hello.mortar  hello.mortared  migration_guide.md  plan.md  readme.md  readme_zh-hans.md  readme_zh-hant.md  release-plz.toml  test_comprehensive.mortar  test_correct.mortar  test_errors.mortar  test_output.mortared  test_sample.mortar
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  refactor-request.md
.github/workflows/: ci.yml  coverage.yml  docs.yml  release-plz.yml  release.yml  update-deps.yml
crates/mortar_cli/: CHANGELOG.md  Cargo.toml  readme.md  readme_zh-hant.md
crates/mortar_cli/src/: i18n.rs  main.rs  main_tests.rs
crates/mortar_compiler/: Cargo.toml  readme.md  readme_zh-hans.md  readme_zh-hant.md
crates/mortar_compiler/examples/: deserialize_example.rs
crates/mortar_compiler/src/: ast.rs  deserializer.rs  diagnostics.rs  escape.rs  handler.rs  lib.rs  parser.rs  serializer.rs  tests.rs  token.rs
crates/mortar_compiler/src/handler/: file_handler.rs  mod.rs  tests.rs
crates/mortar_compiler/src/parser/: error.rs  expression.rs  statement.rs  top_level.rs
crates/mortar_compiler/src/tests/: branch_test.rs  control_flow_test.rs  deserializer_test.rs  diagnostics_test.rs  file_handler_tests.rs  interpolation_test.rs  mod.rs  parser_test.rs  performance_serialization_test.rs  performance_test.rs  separator_test.rs  serializer_test.rs  token_test.rs  type_checking_test.rs  variable_test.rs
crates/mortar_grammar/: Cargo.toml
crates/mortar_grammar/src/: lib.rs
crates/mortar_language/: CHANGELOG.md  Cargo.toml  readme.md  readme_zh-hant.md
crates/mortar_language/src/: lib.rs
crates/mortar_lsp/: CHANGELOG.md  Cargo.toml  readme.md  readme_zh-hant.md
crates/mortar_lsp/src/: analysis.rs  backend.rs  files.rs  lib.rs  main.rs
crates/mortar_lsp/src/backend/: completion.rs  diagnostics.rs  document_analysis.rs  i18n.rs  lsp_handlers.rs  semantic_tokens.rs
crates/mortar_lsp/tests/: diagnostics_integration.rs  language_detection_test.rs  shutdown_test.rs  simple_performance_test.rs
docs/: README.md  book.toml
docs/src/: 1_introduction.md  2_quick-start.md  3_installation.md  4_0_core-concepts.md  4_10_enums.md  4_1_nodes.md  4_2_text-events.md  4_3_choices.md  4_4_functions.md  4_5_variables.md  4_6_branch-interpolation.md  4_7_localization.md  4_8_control-flow.md  4_9_event-system.md  4_basic-concepts.md  5_0_examples.md  5_1_basic-dialogue.md  5_1_text-blocks.md  5_2_interactive-story.md  5_3_choice-system.md  5_3_game-integration.md  6_1_cli.md  6_1_event-indexing.md  6_2_ide-support.md  6_3_nested-choices.md  6_4_return-break.md  7_1_json-output.md  7_2_faq.md  7_3_contributing.md  9_1_json-output.md  SUMMARY.md
docs/src/examples/: 7_1_basic-dialogue.md  7_3_game-integration.md
docs/zh-Hans/: book.toml
docs/zh-Hans/src/: 1_introduction.md  2_quick-start.md  3_installation.md  4_0_core-concepts.md  4_10_enums.md  4_1_nodes.md  4_2_text-events.md  4_3_choices.md  4_4_functions.md  4_5_variables.md  4_6_branch-interpolation.md  4_7_localization.md  4_8_control-flow.md  4_9_event-system.md  4_basic-concepts.md  4_core-concepts.md  5_0_examples.md  5_1_basic-dialogue.md  5_1_text-blocks.md  5_2_interactive-story.md  5_3_choice-system.md  5_3_game-integration.md  5_syntax-reference.md  6_1_cli.md  6_1_event-indexing.md  6_2_ide-support.md  6_2_string-interpolation.md  6_3_nested-choices.md  6_4_return-break.md  7_1_json-output.md  7_2_faq.md  7_3_contributing.md  8_2_lsp.md  8_3_ide-support.md  9_1_json-output.md  SUMMARY.md
docs/zh-Hans/src/examples/: 7_1_basic-dialogue.md  7_2_interactive-story.md  7_3_game-integration.md
docs/zh-Hans/theme/: catppuccin-complete.css
examples/: basic.mortar  basic.mortared  branch_interpolation.mortar  branch_interpolation.mortared  control_flow.mortared  enum_branch.mortared  performance_system.mortar  performance_system.mortared  simple.mortared
examples/en/: basic.mortar  basic.mortared  branch_interpolation.mortar  branch_interpolation.mortared  control_flow.mortar  control_flow.mortared  enum_branch.mortar  enum_branch.mortared  performance_system.mortar  performance_system.mortared  simple.mortar  simple.mortared
examples/zh/: basic.mortared  branch_interpolation.mortar  branch_interpolation.mortared  control_flow.mortar  control_flow.mortared  enum_branch.mortar  enum_branch.mortared  performance_system.mortar  performance_system.mortared  simple.mortar  simple.mortared
mortar_cli/src/: main.rs
mortar_compiler/: Cargo.toml
mortar_compiler/src/: lib.rs
mortar_compiler/src/tests/: mod.rs  serializer_test.rs
mortar_language/: Cargo.toml
mortar_language/src/: lib.rs
mortar_lsp/src/: lib.rs
src/: main.rs  parser.rs  serializer.rs  tests.rs  token.rs
src/tests/: parser_test.rs  token_test.rs
