[workspace]
members = [
    "crates/mortar_language",
    "crates/mortar_compiler", 
    "crates/mortar_cli",
    "crates/mortar_lsp",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2024"
authors = ["Bli-AIk <haikun2333@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Bli-AIk/mortar"
homepage = "https://github.com/Bli-AIk/mortar"
description = "A Domain Specific Language designed for game dialogue and text event systems."
documentation = "https://docs.rs/mortar"
readme = "readme.md"
keywords = ["dsl", "dialogue", "game-dialogue", "scripting", "parser"]
categories = ["game-development", "parsing"]

exclude = [
    "target/*",
    ".github/*",
    "book/*",
    "**/book/*",
    "docs/*",
    "theme-backup/*",
    "temp-theme/*",
    "node_modules/*",
    "examples/*",
    "theme/*",
]

[workspace.dependencies]
ariadne = "0.6.0"
chumsky = "0.11.2"
clap = "4.5.53"
logos = "0.15.1"
owo-colors = "4.2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Internal dependencies
mortar_compiler = { version = "0.5", path = "./crates/mortar_compiler" }
mortar_cli = { version = "0.3", path = "./crates/mortar_cli" }
mortar_language = { version = "0.5.1", path = "./crates/mortar_language" }
mortar_lsp = { version = "0.4", path = "./crates/mortar_lsp" }