[package]
name = "mortar_cli"
version = "0.3.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Mortar language command line tool"
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "mortar"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap.workspace = true
mortar_compiler.workspace = true

[dev-dependencies]
tempfile = "3.25"

[package.metadata.workspaces]
independent = true
