[package]
name = "mortar_grammar"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Mortar language syntax definition"
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
