[package]
name = "mortar_language"
version = "0.2.0"

[package.metadata.workspaces]
independent = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
mortar_compiler.workspace = true
mortar_lsp.workspace = true

# Re-export core functionality
[lib]
name = "mortar_language"
path = "src/lib.rs"
