[package]
name = "mortar_language"
version = "0.5.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
mortar_compiler.workspace = true
mortar_lsp.workspace = true

[dev-dependencies]
tempfile = "3.8"
serde_json = "1.0"

# Re-export core functionality
[lib]
name = "mortar_language"
path = "src/lib.rs"

[package.metadata.workspaces]
independent = true
