[package]
name = "mortar_lsp"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Mortar language LSP server"
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
mortar_compiler.workspace = true
tokio = { version = "1.0", features = ["full"] }
tower-lsp-server = "0.22"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ropey = "1.6"
dashmap = "6.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

[[bin]]
name = "mortar_lsp"
path = "src/main.rs"

[package.metadata.workspaces]
independent = true